<resources>
    <string name="app_name">Pacemaker</string>
    <string name="title_activity_pacemaker">PacemakerActivity</string>
    <string name="image_not_found">Image not found.</string>
    <string name="navigation_tv_home_str">Home</string>
    <string name="navigation_tv_play_str">Play</string>
    <string name="navigation_tv_history_str">History</string>
    <string name="apacemaker_tv_title_str">My training</string>
    <string name="fhistory_tv_title_str">History</string>
    <string name="aoption_tv_title_str">Option</string>
    <string name="aopensource_tv_title_str">Open Source</string>
    <string name="fhome_tv_fragment_name_str">HomeFragment</string>
    <string name="fhome_tv_list_unavailable_str">No data.</string>
    <string name="fhome_tv_title_part_str">Part</string>
    <string name="fhome_tv_title_name_str">Name</string>
    <string name="fhome_tv_title_mass_str">Mass</string>
    <string name="fhome_tv_title_rep_str">Reps</string>
    <string name="fhome_tv_title_set_str">Sets</string>
    <string name="fhome_tv_title_interval_str">Rest</string>
    <string name="faddition_tv_title_addition_str">Add</string>
    <string name="faddition_tv_title_edit_str">Edit</string>
    <string name="faddition_tv_part_str">Part:</string>
    <string name="faddition_tv_name_str">Name:</string>
    <string name="faddition_tv_name_hint_str"><b>Exercise Name</b></string>
    <string name="faddition_tv_mass_str">Mass</string>
    <string name="faddition_tv_mass_hint_str">Insert Mass(0 for Calisthenics)</string>
    <string name="faddition_tv_rep_str">Reps</string>
    <string name="faddition_tv_rep_hint_str">Insert Reps</string>
    <string name="faddition_tv_set_str">Set</string>
    <string name="faddition_tv_set_hint_str">Insert Sets</string>
    <string name="faddition_tv_interval_str">Rest</string>
    <string name="faddition_tv_interval_hint_str">Insert interval between exercise</string>
    <string name="faddition_tv_exercise_name_str">Name will be filled automatically when you press again.</string>
    <string name="faddition_tv_exercise_name_default_upper_body">Torso</string>
    <string name="faddition_tv_exercise_name_default_arm">Arm</string>
    <string name="faddition_tv_exercise_name_default_chest">Chest</string>
    <string name="faddition_tv_exercise_name_default_abdomen">Abs</string>
    <string name="faddition_tv_exercise_name_default_lower_body">legs</string>
    <string name="faddition_tv_exercise_name_default_shoulder">Shoulder</string>
    <string name="dremove_tv_main_str">Delete this one?</string>
    <string name="dremove_tv_confirm_str">Yes</string>
    <string name="dremove_tv_cancel_str">No</string>
    <string name="dprofile_tv_height_str">Height</string>
    <string name="dprofile_tv_height_hint_str">1 - 250(cm)</string>
    <string name="dprofile_tv_weight_str">Weight</string>
    <string name="dprofile_tv_weight_hint_str">1 - 300(kg)</string>
    <string name="dprofile_msg_out_of_range_str">Out of Range.</string>
    <string name="dprofile_tv_confirm_str">Confirm</string>
    <string name="dprofile_tv_first_setting_str">Save and start the app.</string>
    <string name="dprofile_tv_regex_str">Please enter your height and weight again.</string>
    <string name="dgiveup_tv_give_up_str">Give up the whole session?</string>
    <string name="dgiveup_tv_confirm_str">Confirm</string>
    <string name="dgiveup_tv_cancel_str">Cancel</string>
    <string name="dgiveupAll_tv_give_up">Give up the whole session?</string>
    <string name="apacemaker_tv_terminate_str">Press back key again to terminate Pacemaker</string>
    <string name="fhistory_detail_set">%d Sets</string>
    <string name="fhistory_detail_rep">%d Reps</string>
    <string name="fhistory_detail_tv_openall_str">Open every details</string>
    <string name="foption_tv_profile_str">Profile</string>
    <string name="foption_tv_mode_str">Night mode</string>
    <string name="foption_tv_mode_weight_str">Always update weight</string>
    <string name="foption_tv_mode_height_str">Always update height</string>
    <string name="foption_tv_toturial_str">See tutorial again</string>
    <string name="foption_tv_interval_str">Rest time</string>
    <string name="foption_tv_option_str">Option</string>
    <string name="foption_tv_supportUs_str">SUPPORT US</string>
    <string name="foption_tv_rateUs_str">Rate us</string>
    <string name="foption_tv_feedback_str">Feedback</string>
    <string name="foption_tv_share_str">Share</string>
    <string name="foption_tv_openSource_str">Open Source License</string>
    <string name="foption_msg_share_str">This app helps your work out. Check it out.</string>
    <string name="foption_msg_name_str">Pacemaker</string>
    <string name="foption_toast_saved">Option Saved</string>
    <string name="foption_UI_design_by">UI Design by Anna Chinellato</string>
    <string name="fhistory_tv_profile_str">Profile</string>
    <string name="fhistory_tv_report_str">Report</string>
    <string name="fhistory_tv_total_str">Total Record</string>
    <string name="fhistory_tv_month_str">Monthly Record</string>
    <string name="unit_weight">%.1f kg</string>
    <string name="unit_height">%.1f cm</string>
    <string name="unit_mass">%d kg</string>
    <string name="unit_time_min_sec">%02d:%02d</string>
    <string name="unit_sets">%d sets</string>
    <string name="unit_sets_goal_done">%d/%d sets</string>
    <string name="unit_reps">%d rep</string>
    <string name="unit_time_hour_min">%02dh %02dm</string>
    <string name="unit_percentage">%d%%</string>
    <string name="dgiveup_tv_main_str">Skip this session?</string>
    <string name="dgiveupall_tv_main_str">Give up the whole session?</string>
    <string name="fplaypopup_tv_btn_plus_str">+10sec</string>
    <string name="fplaypopup_tv_exercise_finish_str">Completed today\'s session</string>
    <string name="fplaypopup_tv_playlist_not_exist_str">No list</string>
    <string name="fplaypopup_tv_exercise_name_str">Exercise Name</string>
    <string name="fplaypopup_tv_list_unavailable_str">No data.</string>
    <string name="fplaypopup_tv_unit_mass_str">Kg</string>
    <string name="fplaypopup_tv_unit_set_str">Set</string>
    <string name="fplaypopup_tv_unit_rep_str">Rep</string>
    <string name="fplaypopup_tv_rest_str">resting</string>
    <string name="fstatistics_tv_mode_bmi_str">See BMI(%d)</string>
    <string name="fstatistics_tv_bmi_str">BMI</string>
    <string name="fstatistics_tv_monthly_title">Draw graph monthly</string>
    <string name="template_feedback_title">Pacemaker Feedback</string>
    <string name="template_slash_str">/</string>
    <string name="template_bmi_str">BMI %d</string>
    <string name="template_bmi_link_str"><u>What\'s BMI?(Link to wikipedia)</u></string>
    <string name="template_bmi_link_uri">https://en.wikipedia.org/wiki/Body_mass_index</string>
    <string name="stimer_tv_main_str">PaceMarker is running.</string>
    <string name="stimer_tv_tag_str">timerservice:wakelock</string>
    <string name="fhistory_comment_prefix_month">You\'ve lifted&#160;</string>
    <string name="fhistory_comment_prefix_total">You\'ve lifted&#160;</string>
    <string name="fhistory_comment_suffix_month">&#160;so far during the month</string>
    <string name="fhistory_comment_suffix_total">&#160;so far with Pacemaker</string>
    <string name="fhistory_no_data">No data. Let the exercise begin.</string>
    <string name="fhistory_0">a 5 gallons(19 litters) Water bottle</string>
    <string name="fhistory_50">a Dryer machine</string>
    <string name="fhistory_100">a Motor scooter</string>
    <string name="fhistory_200">one Barrel of oil</string>
    <string name="fhistory_500">a Grand Piano</string>
    <string name="fhistory_1000">a Sedan</string>
    <string name="fhistory_2000">a Giraffe</string>
    <string name="fhistory_5000">a Tyrannosaurus rex</string>
    <string name="fhistory_10000">an Anchor of Queen Elizabeth 2</string>
    <string name="fhistory_20000">a F-15 eagle</string>
    <string name="fhistory_50000">a Blue whale</string>
    <string name="fopensource_title_str">Open Source list</string>
    <string name="fopensource_licens_str">License</string>
</resources>