<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rvExerciseItem_clo_main"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:animateLayoutChanges="true"
        android:background="#fff8f8f8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/rvExerciseItem_iv_part"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:contentDescription="@string/image_not_found"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rvExerciseItem_tv_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rvExerciseItem_tv_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical"
            android:text="@string/image_not_found"
            android:textColor="#ff3b4046"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rvExerciseItem_iv_part"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rvExerciseItem_clo_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:animateLayoutChanges="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvExerciseItem_clo_main"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/rvExerciseItem_tv_mass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_mass"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/rvExerciseItem_tv_set"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rvExerciseItem_tv_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_sets_goal_done"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/rvExerciseItem_tv_rep"
            app:layout_constraintStart_toEndOf="@id/rvExerciseItem_tv_mass"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/rvExerciseItem_tv_rep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_reps"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/rvExerciseItem_tv_set"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>