<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fStatistics_container_lineChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/fStatistics_linechart"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginTop="15dp"
                app:layout_constraintBottom_toTopOf="@+id/fStatistics_clo_bmi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fStatistics_clo_monthly"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toTopOf="@id/fStatistics_clo_bmi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fStatistics_linechart">

                <TextView
                    android:id="@+id/fStatistics_tv_monthly_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:text="@string/fstatistics_tv_monthly_title"
                    android:textColor="@color/black_3B4046"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/fStatistics_swc_monthly"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Switch
                    android:id="@+id/fStatistics_swc_monthly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="18dp"
                    android:shadowColor="@color/blue_5C83CF_70"
                    android:thumbTint="@color/blue_5C83CF"
                    android:trackTint="@color/blue_5C83CF_70"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/fStatistics_tv_monthly_title"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <!-- 여기까지 -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fStatistics_clo_bmi"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toTopOf="@id/fStatistics_clo_bmi_change"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fStatistics_clo_monthly">

                <TextView
                    android:id="@+id/fStatistics_tv_mode_bmi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:text="@string/fstatistics_tv_mode_bmi_str"
                    android:textColor="@color/black_3B4046"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/fStatistics_swc_mode_bmi"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Switch
                    android:id="@+id/fStatistics_swc_mode_bmi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="18dp"
                    android:shadowColor="@color/blue_5C83CF_70"
                    android:thumbTint="@color/blue_5C83CF"
                    android:trackTint="@color/blue_5C83CF_70"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/fStatistics_tv_mode_bmi"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fStatistics_clo_bmi_change"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                app:layout_constraintBottom_toTopOf="@id/fStatistics_tv_bmi_link"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fStatistics_clo_bmi">

                <TextView
                    android:id="@+id/fStatistics_tv_bmi_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:text="@string/fstatistics_tv_bmi_str"
                    android:textColor="@color/black_3B4046"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/fStatistics_clo_bmi_item"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/fStatistics_clo_bmi_item"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="18dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toEndOf="@+id/fStatistics_tv_bmi_title"
                    app:layout_constraintTop_toTopOf="parent">

                    <FrameLayout
                        android:id="@+id/fStatistics_flo_bmi_minus"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/fStatistics_tv_bmi"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/fStatistics_iv_bmi_minus"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/image_not_found"
                            android:src="@drawable/img_rest_minus_daytime" />

                    </FrameLayout>


                    <TextView
                        android:id="@+id/fStatistics_tv_bmi"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textColor="#ff3b4046"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/fStatistics_flo_bmi_plus"
                        app:layout_constraintStart_toEndOf="@+id/fStatistics_flo_bmi_minus"
                        app:layout_constraintTop_toTopOf="parent" />


                    <FrameLayout
                        android:id="@+id/fStatistics_flo_bmi_plus"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/fStatistics_tv_bmi"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/fStatistics_iv_bmi_plus"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/image_not_found"
                            android:src="@drawable/img_rest_plus_daytime" />
                    </FrameLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/fStatistics_tv_bmi_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="15dp"
                android:text="@string/template_bmi_link_str"
                android:textColor="@color/blue_5C83CF_70"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fStatistics_clo_bmi_change" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>